# Simulacije-rasprsivanja-svjetlosti

./: CMakeLists.txt  README.md
CMake/: find_vulkan_sdk.cmake
src/: CMakeLists.txt  main.cpp
src/rendering/: camera.h  renderEngine.cpp  renderEngine.h
src/shaders/: Upute.txt  main_shader.comp  main_shader.spv  windows_compiler.bat
src/simulation/: atmosphere.h  sun.h
